@@ -3,7 +3,6 @@ import Models.Maps;
 import Models.Continent;
 import Models.Country;
 import java.io.File;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.StandardOpenOption;
 import java.util.*;
 import java.io.IOException;
@@ -18,8 +17,8 @@ public class MapsController {
 
     public MapsController() {
         this.maps = new Maps();
-        this.d_continents = this.maps.getContinents();
-        this.d_countries = this.maps.getCountries();
+        d_continents = this.maps.getContinents();
+        d_countries = this.maps.getCountries();
     }
 
     public LinkedHashMap<String, Country> getD_countries() {
@@ -61,14 +60,14 @@ public class MapsController {
         return null;
     }
 
-    private void processContinentLine(String line) {
-        String[] parts = line.split(" ");
-        Continent continent = new Continent(d_continents.size() + 1, parts[0], Integer.parseInt(parts[1]), parts[2]);
-        d_continents.put(String.valueOf(d_continents.size() + 1), continent);
+    private void processContinentLine(String p_line) {
+        String[] l_parts = p_line.split(" ");
+        Continent l_continent = new Continent(d_continents.size() + 1, l_parts[0], Integer.parseInt(l_parts[1]), l_parts[2]);
+        d_continents.put(String.valueOf(d_continents.size() + 1), l_continent);
     }
 
-    private void processCountryLine(String line) {
-        String[] l_parts = line.split(" ");
+    private void processCountryLine(String p_line) {
+        String[] l_parts = p_line.split(" ");
         Country l_country = new Country(Integer.parseInt(l_parts[0]), l_parts[1], l_parts[2], l_parts[3], l_parts[4]);
         d_countries.put(l_parts[1], l_country);
         String l_continent=l_parts[2].trim();
@@ -78,45 +77,46 @@ public class MapsController {
         d_continents.get(l_parts[2].trim()).addCountry(l_country);
     }
 
-    private void processBorderLine(String line) {
-        String[] parts = line.split(" ");
-        if (parts.length < 2) return;
-        String countryId = parts[0].trim();
-        Country country = findCountryById(countryId);
-        if (country == null) {
+    private void processBorderLine(String p_line) {
+        String[] l_parts = p_line.split(" ");
+        if (l_parts.length < 2) return;
+        String l_countryId = l_parts[0].trim();
+        Country l_country = findCountryById(l_countryId);
+        if (l_country == null) {
                 return;
         }
-        for (int i = 1; i < parts.length; i++) {
-            String neighborId = parts[i].trim();
-            Country neighbor = findCountryById(neighborId);
-            if (neighbor != null) {
-                country.addNeighbor(neighbor);
+        for (int i = 1; i < l_parts.length; i++) {
+            String l_neighborId = l_parts[i].trim();
+            Country l_neighbor = findCountryById(l_neighborId);
+            if (l_neighbor != null) {
+                l_country.addNeighbor(l_neighbor);
             }
         }
     }
 
-    public void addContinent(String continentName, int continentValue) {
-        if (!maps.getContinents().isEmpty() && continentAlreadyExists(continentName)) {
-            System.out.println("The continent(" + continentName + ")you are trying to add already exist!");
+    public void addContinent(String p_continentName, int p_continentValue) {
+        if (!maps.getContinents().isEmpty() && continentAlreadyExists(p_continentName)) {
+            System.out.println("The continent(" + p_continentName + ")you are trying to add already exist!");
             return;
         }
-        String line = continentName + " " + continentValue + " " + "green";
+        String line = p_continentName + " " + p_continentValue + " " + "green";
         processContinentLine(line);
     }
 
     public void removeContinent(String p_continentName) {
-        boolean continentFound = false;
-        Iterator<Continent> iterator = d_continents.values().iterator();
-        while (iterator.hasNext()) {
-            Continent l_current_continent = iterator.next();
-            if (l_current_continent.getName().equals(p_continentName)) {
-                continentFound = true;
-                iterator.remove();
+        boolean l_continentFound = false;
+        Iterator<Continent> l_iterator = d_continents.values().iterator();
+        while (l_iterator.hasNext()) {
+            Continent l_currentContinent = l_iterator.next();
+            if (l_currentContinent.getName().equals(p_continentName)) {
+                l_continentFound = true;
+                l_iterator.remove();
                 System.out.println("Removed '" + p_continentName + "'.");
                 return;
             }
         }
-        if (!continentFound) {
+        //TODO: remove this part;dead code
+        if (!l_continentFound) {
             System.out.println("Continent that you are trying to remove does not exit");
         }
     }
@@ -126,45 +126,45 @@ public class MapsController {
     }
 
     public boolean validateExistence() {
-        boolean continentsExist = this.d_countries.values().stream()
-                .allMatch(country -> this.d_continents.containsKey(country.getContinentId()));
-        if (!continentsExist) return false;
-        boolean allContinentsHaveCountries = this.d_continents.entrySet().stream()
-                .noneMatch(entry -> entry.getValue().getCountries().isEmpty());
-        if (!allContinentsHaveCountries) return false;
-        return this.d_countries.values().stream()
+        boolean l_continentsExist = d_countries.values().stream()
+                .allMatch(l_country -> d_continents.containsKey(l_country.getContinentId()));
+        if (!l_continentsExist) return false;
+        boolean l_allContinentsHaveCountries = d_continents.entrySet().stream()
+                .noneMatch(l_entry -> l_entry.getValue().getCountries().isEmpty());
+        if (!l_allContinentsHaveCountries) return false;
+        return d_countries.values().stream()
                 .flatMap(country -> country.getNeighbors().values().stream())
-                .allMatch(neighbor -> this.d_countries.containsKey(neighbor.getName()));
+                .allMatch(neighbor -> d_countries.containsKey(neighbor.getName()));
     }
 
-    public boolean validateFullConnectivity(Map<String, Country> countries) {
-        if (countries.isEmpty()) return true;
-        LinkedHashMap<String, Boolean> visited = new LinkedHashMap<>();
-        countries.values().forEach(country -> visited.put(country.getName(), false));
-        traverseMap(countries.values().iterator().next(), visited);
-        return visited.values().stream().allMatch(Boolean.TRUE::equals);
+    public boolean validateFullConnectivity(Map<String, Country> p_countries) {
+        if (p_countries.isEmpty()) return true;
+        LinkedHashMap<String, Boolean> l_visited = new LinkedHashMap<>();
+        p_countries.values().forEach(country -> l_visited.put(country.getName(), false));
+        traverseMap(p_countries.values().iterator().next(), l_visited);
+        return l_visited.values().stream().allMatch(Boolean.TRUE::equals);
     }
 
     public boolean validateConnectivity() {
-        for (Continent continent : this.d_continents.values()) {
-            if (!validateFullConnectivity(continent.getCountries())) return false;
+        for (Continent l_continent : d_continents.values()) {
+            if (!validateFullConnectivity(l_continent.getCountries())) return false;
         }
-        return this.d_countries.isEmpty() || validateFullConnectivity(this.d_countries);
+        return d_countries.isEmpty() || validateFullConnectivity(d_countries);
     }
 
-    public void traverseMap(Country country, Map<String, Boolean> visited) {
-        visited.put(country.getName(), true);
-        country.getNeighbors().forEach((name, neighbor) -> {
-            if (Boolean.FALSE.equals(visited.get(name))) {
-                traverseMap(neighbor, visited);
+    public void traverseMap(Country p_country, Map<String, Boolean> p_visited) {
+        p_visited.put(p_country.getName(), true);
+        p_country.getNeighbors().forEach((name, neighbor) -> {
+            if (Boolean.FALSE.equals(p_visited.get(name))) {
+                traverseMap(neighbor, p_visited);
             }
         });
     }
 
     public boolean countryAlreadyExists(String p_country) {
         for (Map.Entry<String, Country> mapEntry : d_countries.entrySet()) {
-            Country country = mapEntry.getValue();
-            if (country.getName().equals(p_country)) {
+            Country l_country = mapEntry.getValue();
+            if (l_country.getName().equals(p_country)) {
                 return true;
             }
         }
@@ -172,10 +172,10 @@ public class MapsController {
     }
 
     public void addCountry(String p_countryName, String p_continentName) {
-        int continentId = -1;
-        for (Continent continent : d_continents.values()) {
-            if (continent.getName().equals(p_continentName)) {
-                continentId = continent.getId();
+        int l_continentId = -1;
+        for (Continent l_continent : d_continents.values()) {
+            if (l_continent.getName().equals(p_continentName)) {
+                l_continentId = l_continent.getId();
                 break;
             }
         }
@@ -189,65 +189,73 @@ public class MapsController {
             System.out.println(p_countryName + "Country already exists!");
             return;
         }
-        int id = d_countries.size() + 1;
-        String line  = id + " " + p_countryName + " " + continentId + " " + 0 + " " + 0;
-        processCountryLine(line);
+        int l_id = d_countries.size() + 1;
+        String l_line  = l_id + " " + p_countryName + " " + l_continentId + " " + 0 + " " + 0;
+        processCountryLine(l_line);
         System.out.println("Added successfully " + p_countryName);
     }
 
     public void removeCountry(String p_countryName) {
-        boolean countryRemoved = false;
-        Iterator<Country> iterator = d_countries.values().iterator();
-        while (iterator.hasNext()) {
-            Country l_country = iterator.next();
+        boolean l_countryRemoved = false;
+        Iterator<Country> l_iterator = d_countries.values().iterator();
+        while (l_iterator.hasNext()) {
+            Country l_country = l_iterator.next();
             if (l_country.getName().equals(p_countryName)) {
-                countryRemoved = true;
-                iterator.remove();
+                l_countryRemoved = true;
+                l_iterator.remove();
                 d_continents.get(l_country.getContinentId()).removeCountry(p_countryName);
                 System.out.println("Removed '" + p_countryName + "'.");
                 return;
             }
         }
-        if(!countryRemoved) {
+        //TODO: deadcode here too
+        if(!l_countryRemoved) {
             System.out.println("Country that you are trying to remove does not exit");
         }
     }
 
+    public void editMap(File p_file) throws IOException{
+        if (!p_file.exists()) {
+            System.out.println("The file doesn't exist, creating a new file.");
+            p_file.createNewFile();
+        }
+        loadMap(p_file.getPath());
+    }
 
     public void loadMap(String p_file) throws IOException {
-        String content = Files.readString(Paths.get(p_file));
-        String[] lines = content.split("\n");
-        boolean readingContinents = false, readingCountries = false, readingBorders = false;
-        for (String line : lines) {
-            line = line.trim();
-            switch (line) {
+        String l_content = Files.readString(Paths.get(p_file));
+        String[] l_lines = l_content.split("\n");
+        boolean l_readingContinents = false, l_readingCountries = false, l_readingBorders = false;
+        for (String l_line : l_lines) {
+            l_line = l_line.trim();
+            switch (l_line) {
                 case "[continents]" -> {
-                    readingContinents = true;
-                    readingCountries = readingBorders = false;
+                    l_readingContinents = true;
+                    l_readingCountries = l_readingBorders = false;
                     continue;
                 }
                 case "[countries]" -> {
-                    readingCountries = true;
-                    readingContinents = readingBorders = false;
+                    l_readingCountries = true;
+                    l_readingContinents = l_readingBorders = false;
                     continue;
                 }
                 case "[borders]" -> {
-                    readingBorders = true;
-                    readingContinents = readingCountries = false;
+                    l_readingBorders = true;
+                    l_readingContinents = l_readingCountries = false;
                     continue;
                 }
             }
-            if (line.isEmpty() || (!(readingContinents || readingCountries || readingBorders))) {
+            if (l_line.isEmpty() || (!(l_readingContinents || l_readingCountries || l_readingBorders))) {
                 continue;
             }
-            if (readingContinents) {
-                processContinentLine(line);
+            if (l_readingContinents) {
+                processContinentLine(l_line);
             }
-            if (readingCountries) {
-                processCountryLine(line);
+            if (l_readingCountries) {
+                processCountryLine(l_line);
             }
-            if (readingBorders) {
-                processBorderLine(line);
+            if (l_readingBorders) {
+                processBorderLine(l_line);
             }
         }
     }
@@ -259,10 +267,10 @@ public class MapsController {
                     " | Number of Countries: " + p_continent.getCountries().size());
             p_continent.getCountries().forEach((countryId, country) -> {
                 System.out.println("\tCountry ID: " + country.getId() + " | Name: " + country.getName()+" | Armies: " + country.getArmies());
-                LinkedHashMap<String, Country> neighborsMap = country.getNeighbors();
-                if (!neighborsMap.isEmpty()) {
-                    String neighbors = String.join(", ", neighborsMap.keySet());
-                    System.out.println("\t\tNeighbors: " + neighbors);
+                LinkedHashMap<String, Country> l_neighborsMap = country.getNeighbors();
+                if (!l_neighborsMap.isEmpty()) {
+                    String l_neighbors = String.join(", ", l_neighborsMap.keySet());
+                    System.out.println("\t\tNeighbors: " + l_neighbors);
                 } else {
                     System.out.println("\t\tNeighbors: None");
                 }
@@ -271,28 +279,28 @@ public class MapsController {
         });
     }
 
-    private Country findCountryByName(String name) {
-        for (Country country : d_countries.values()) {
-            if (String.valueOf(country.getName()).equals(name)) {
-                return country;
+    private Country findCountryByName(String p_name) {
+        for (Country l_country : d_countries.values()) {
+            if (String.valueOf(l_country.getName()).equals(p_name)) {
+                return l_country;
             }
         }
         return null;
     }
 
-    public void editNeighbors(String p_operation, String countryName, String neighborName) {
-        if(findCountryByName(countryName)==null){
+    public void editNeighbors(String p_operation, String p_countryName, String p_neighborName) {
+        if(findCountryByName(p_countryName)==null){
             System.out.println("Country doesn't exists!");
             return;
         }
-        if(findCountryByName(neighborName)==null){
+        if(findCountryByName(p_neighborName)==null){
             System.out.println("Neighbor country doesn't exists!");
             return;
         }
-        Country country = findCountryByName(countryName);
-        Country neighbour=findCountryByName(neighborName);
+        Country country = findCountryByName(p_countryName);
+        Country neighbour=findCountryByName(p_neighborName);
         if("add".equals(p_operation)) {
-            if(country.findNeighborByName(neighborName)){
+            if(country.findNeighborByName(p_neighborName)){
                 System.out.println("Neighbor already exists!");
                 return;
             }
@@ -300,82 +308,51 @@ public class MapsController {
         }
 
         if("remove".equals(p_operation)) {
-            if(country.findNeighborByName(neighborName)){
+            if(country.findNeighborByName(p_neighborName)){
                 country.removeNeighborById(neighbour.getId());
                 return;
             }
-            System.out.println("The neighbor you are trying to remove doesnot exist");
+            System.out.println("The neighbor you are trying to remove doesn't exist");
         }
     }
-
-
-
-
-        // if (country == null) {
-        //     System.out.println("Country not found");
-        //     return;
-        // }
-        // Country neighbor = country.findNeighborByName(neighborName);
-        // country.getNeighborsByName(neighborName);
-
-        // if (neighbor != null) {
-        //     // Country neighbor = neighborOptional.get();
-        //     if ("add".equals(p_operation)) {
-        //         System.out.println("The neigbor already exists");
-        //     }
-        //     if ("remove".equals(p_operation)) {
-        //         country.removeNeighborById(neighbor.getId());
-        //     }
-        // } else {
-        //     // Neighbor not found
-        //     if ("add".equals(p_operation)) {
-        //         country.addNeighbor(neighbor);
-        //     }
-        //     if ("remove".equals(p_operation)) {
-        //         System.out.println("Neighbor not found.");
-
-        //     }
-        //     return;
-        
-    
 
     public void saveMap(File p_file) throws IOException {
         if (!p_file.exists()) {
             System.out.println("The file doesn't exist, creating a new file.");
             p_file.createNewFile();
         }
-        StringBuilder contentBuilder = new StringBuilder();
+        StringBuilder l_contentBuilder = new StringBuilder();
 
         // Adding the file section
-        String baseName = p_file.getName().split("\\.")[0];
-        String line = String.format("pic %s_pic.jpg\nmap %s_map.gif\ncrd %s.cards\n\n", baseName, baseName, baseName);
-        contentBuilder.append("[files]\n").append(line);
+        String l_baseName = p_file.getName().split("\\.")[0];
+        String line = String.format("pic %s_pic.jpg\nmap %s_map.gif\ncrd %s.cards\n\n", l_baseName, l_baseName, l_baseName);
+        l_contentBuilder.append("[files]\n").append(line);
 
         // Adding the continent
-        String continents = d_continents.values().stream()
+        String l_continents = d_continents.values().stream()
                 .sorted(Comparator.comparingInt(Continent::getId))
-                .map(continent -> String.format("%s %d %s\n", continent.getName(), continent.getContinentValue(), continent.getColor()))
+                .map(l_continent -> String.format("%s %d %s\n", l_continent.getName(), l_continent.getContinentValue(), l_continent.getColor()))
                 .collect(Collectors.joining());
-        contentBuilder.append("[continents]\n").append(continents).append("\n");
+        l_contentBuilder.append("[continents]\n").append(l_continents).append("\n");
 
         // Adding the country
-        String countries = d_countries.values().stream()
+        String l_countries = d_countries.values().stream()
                 .sorted(Comparator.comparingInt(Country::getId))
-                .map(country -> String.format("%d %s %s %s %s\n", country.getId(), country.getName(), country.getContinentId(), country.getXCoordinate(), country.getYCoordinate()))
+                .map(l_country -> String.format("%d %s %s %s %s\n", l_country.getId(), l_country.getName(), l_country.getContinentId(), l_country.getXCoordinate(), l_country.getYCoordinate()))
                 .collect(Collectors.joining());
-        contentBuilder.append("[countries]\n").append(countries).append("\n");
+        l_contentBuilder.append("[countries]\n").append(l_countries).append("\n");
 
         // Adding the neighbours
-        String borders = d_countries.values().stream()
+        String l_borders = d_countries.values().stream()
                 .map(country -> {
-                    String neighbors = country.getNeighbors().values().stream()
+                    String l_neighbors = country.getNeighbors().values().stream()
                             .map(neighbor -> String.valueOf(neighbor.getId()))
                             .collect(Collectors.joining(" "));
-                    return country.getId() + " " + neighbors + "\n";
+                    return country.getId() + " " + l_neighbors + "\n";
                 })
                 .collect(Collectors.joining());
-        System.out.println(borders);
-        contentBuilder.append("[borders]\n").append(borders);
-        Files.write(Paths.get(p_file.getPath()), contentBuilder.toString().getBytes(StandardCharsets.UTF_8), StandardOpenOption.WRITE);
+
+        l_contentBuilder.append("[borders]\n").append(l_borders);
+        Files.writeString(Paths.get(p_file.getPath()), l_contentBuilder.toString(), StandardOpenOption.WRITE);
     }
 }
